# smartnation-health

./: .gitignore  .pylintrc  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Presentation.pptx  README.md  README_cleaning.md  challenge.pptx  data_cleaning.ipynb  docker-compose.yaml  environment.yml  requirements.txt  snomed_read.ipynb  sweep.yaml  testing.ipynb
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
DATASET/: patient2.txt  patient3.txt  patient5.txt  patient8.txt
Patitents_diagnosis/: patient1_diagnostics.txt  patient2_diagnostics.txt  patient3_diagnostics.txt  patient4_diagnostics.txt  patient5_diagnostics.txt
dataset/: patient14.txt  patient6.txt  patient7.txt
design/: smartNationAIHealthChallenge.pptx
docker-example/: Dockerfile  mistral_api.py
frontend/: .gitignore  Dockerfile  README.md  requirements.txt  test.py  ui_chat_db.py  ui_feed_db.py  ui_snomed.py  utils.py
inputs/: sample.txt
nosql/app/: pyproject.toml
nosql/app/app/: main.py
nosql/app/app/config/: config.py  database.py
nosql/app/app/models/: chatbot_query.py  diagnosis.py  patient.py
nosql/app/app/routes/: patient_routes.py
notebooks/: config_chunker.yaml  content_preparator.py  measure_metrics.ipynb  testing_pipeline.ipynb
pipeline_meta/: prompt_meta.yaml  prompt_meta_testing.yaml  snomed_ct_meta.yaml
prompt_template/: doctor_question_fr.txt  identify_snomed_ct_fr.txt  ner_query_llm_age_fr.txt  ner_query_llm_allergies_fr.txt  ner_query_llm_bmi_fr.txt  ner_query_llm_diagnostics_fr.txt  ner_query_llm_gender_fr.txt  ner_query_llm_height_fr.txt  ner_query_llm_weight_fr.txt  (+13 more)
(+67 files in other folders)
