[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Guilherme Madureira"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.2"
fastapi = "^0.103.2"
pydantic = "^2.4.2"
motor = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
